# stackfoo

./: Dockerfile  Jenkinsfile  README.md  stack.yaml  stackfoo.cabal
app/: main.hs
src/: Lib.hs
